--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
 		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
-		
+		<link rel="stylesheet" href="assets/css/animate.css">
+		<link rel="stylesheet" href="assets/css/icomoon.css">
+		<link rel="stylesheet" href="assets/css/simple-line-icons.css">
+		<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+		<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="assets/css/magnific-popup.css">
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
-		
 		<link rel="stylesheet" href="assets/css/style.css">
+
+		<script src="assets/js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
 	<div class="qbootstrap-hero" data-section="home">
@@ -289,6 +295,18 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.easing.1.3.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery.waypoints.min.js"></script>
+	<script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
+	<script src="assets/js/jquery.flexslider-min.js"></script>
+	<script src="assets/js/owl.carousel.min.js"></script>
+	<script src="assets/js/jquery.stellar.min.js"></script>
+	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="assets/js/magnific-popup-options.js"></script>
+	<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
